--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react-bootstrap": "^0.32.28",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-select": "^5.0.1",
     "apexcharts": "^3.28.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
@@ -36,6 +39,7 @@
     "react-select": "^5.0.0",
     "reactstrap": "^8.10.0",
     "semantic-ui-css": "^2.4.1",
+    "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
   "eslintConfig": {
@@ -55,5 +59,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.3",
+    "@types/react-dom": "^17.0.10"
   }
 }
