--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "file-saver": "^2.0.5",
+    "mobx": "^6.3.6",
+    "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.6.4",
@@ -61,7 +63,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.16.0",
     "@types/file-saver": "^2.0.3",
-    "@types/react-dom": "^17.0.10"
+    "@types/react-dom": "^17.0.10",
+    "mobx-react-devtools": "^6.1.1"
   }
 }
